At least got it started; dealt with some other alignment issues, too.

--- a/public/css/bink.css
+++ b/public/css/bink.css
@@ -1,6 +1,7 @@
 /*
  * BINK Styles
  */
-.nav-item {
-  cursor: pointer;
+
+#main {
+  margin-bottom: 84px
 }
